--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "angular-in-memory-web-api": "^0.5.2",
     "angular2-moment": "^1.7.0",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
     "moment": "^2.20.1",
     "rxjs": "^5.5.2",
